welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:8: error: value =< is not a member of Int
  if (n=<2) {droite()}
       ^