welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
do {
  var n:Int = 0
  for (i <- 1 to 5) {
    if (estSurBiscuit() ) {n=n+1}
    avance()
  }
  
  if (n=<2) {droite()}
  else {gauche()}
  
  n=0
  
} while (sortieTrouvee()==false)

avance()